@@ -23,11 +23,9 @@
  * questions.
  */
 
-package java.lang;
+package jdk.internal.access;
 
-// Android-changed: Make JavaLangAccess a final class. http://b/399374716
-// public interface JavaLangAccess {
-public final class JavaLangAccess {
+public interface JavaLangAccess {
 
     // BEGIN Android-removed: Not used in Android.
     /*
@@ -85,9 +83,7 @@ public final class JavaLangAccess {
      * Class object does not represent an enum type;
      * the result is uncloned, cached, and shared by all callers.
      */
-    public <E extends Enum<E>> E[] getEnumConstantsShared(Class<E> klass) {
-        return klass.getEnumConstantsShared();
-    }
+    <E extends Enum<E>> E[] getEnumConstantsShared(Class<E> klass);
 
     // BEGIN Android-removed: Not used in Android.
     /*
@@ -566,12 +562,6 @@ public final class JavaLangAccess {
      * explicitly set otherwise <qualified-class-name> @<id>
      * /
     String getLoaderNameID(ClassLoader loader);
-
-    /**
-     * Is a security manager already set or allowed to be set
-     * (using -Djava.security.manager=allow)?
-     * /
-    boolean allowSecurityManager();
      */
-     // END Android-removed: Not used in Android.
+    // END Android-removed: Not used in Android.
 }
